--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pissh">
 
+    <!--  If internet connection doesn't work, try placing this below in application  -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PiSSH">
         <activity
-            android:name=".DisplayIPAddressActivity"
+            android:name=".SshStatusActivity"
             android:parentActivityName=".MainActivity"/>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
